@@ -1,2 +1,2 @@
-#Quisk version 4.2.47
+#Quisk version 4.2.48
 from .quisk import main
